Extract .bcp file from charity data

--- a/bulk/charity-commission/Makefile
+++ b/bulk/charity-commission/Makefile
@@ -2,7 +2,7 @@ DATE_NUMERIC:=$(shell date +"%Y%m")
 DATE_TEXT:=$(shell date +"%B")
 CHARITY_COMMISSION_URL=http://apps.charitycommission.gov.uk/data/$(DATE_NUMERIC)/extract1/RegPlusExtract_$(DATE_TEXT)_2016.zip
 
-addresses.tsv: addresses.py cache/RegPlusExtract.zip
+addresses.tsv: addresses.py cache/extract_charity.bcp
 	addresses.py < cache/edubase.csv > $@
 
 # download from EDUBASE
@@ -10,6 +10,10 @@ addresses.tsv: addresses.py cache/RegPlusExtract.zip
 cache/RegPlusExtract.zip:
 	@mkdir -p cache
 	curl -s $(CHARITY_COMMISSION_URL) > $@.new
+	mv $@.new $@
+
+cache/extract_charity.bcp: cache/RegPlusExtract.zip
+	unzip -p cache/RegPlusExtract.zip extract_charity.bcp > $@.new
 	mv $@.new $@
 
 prune::
