Explicit path for running address.py

--- a/bulk/companies-house/Makefile
+++ b/bulk/companies-house/Makefile
@@ -17,7 +17,7 @@ ZIPS=\
 all:	addresses.tsv
 
 addresses.tsv:	addresses.py $(ZIPS)
-	for f in $(ZIPS) ; do funzip $$f | addresses.py ; done > $@
+	for f in $(ZIPS) ; do funzip $$f | ./addresses.py ; done > $@
 
 
 #
