Fix democracy club polling stations
* Put in the standard format
* Assign a deterministic 9-digit ID derived from the input address text
* Put postcode in its own field
* Drop duplicate postcodes
* Drop trailing punctuation

--- a/bulk/democracy-club-polling-stations/Makefile
+++ b/bulk/democracy-club-polling-stations/Makefile
@@ -1,4 +1,4 @@
 CSV=democracy-club-polling-stations-2016-07.tsv
 
 addresses.tsv:	addresses.py $(CSV)
-	addresses.py < $(CSV) > $@
+	./addresses.py < $(CSV) > $@
