Fix invocations of programs in $PWD

--- a/bulk/food-hygiene/Makefile
+++ b/bulk/food-hygiene/Makefile
@@ -1,11 +1,11 @@
 INDEX_URL="http://ratings.food.gov.uk/open-data/"
 
 addresses.tsv:	addresses.sh addresses.xsl
-	addresses.sh > $@
+	./addresses.sh > $@
 
 download:
 	mkdir -p cache
-	download.sh $(INDEX_URL) cache/
+	./download.sh $(INDEX_URL) cache/
 
 clean:
 	rm -rf cache
