--- a/bulk/price-paid/Makefile
+++ b/bulk/price-paid/Makefile
@@ -2,7 +2,7 @@
 PP_COMPLETE_URL='http://prod.publicdata.landregistry.gov.uk.s3-website-eu-west-1.amazonaws.com/pp-complete.csv'
 
 addresses.tsv:	cache/pp-complete.csv addresses.py
-	addresses.py < cache/pp-complete.csv > $@
+	./addresses.py < cache/pp-complete.csv > $@
 
 # download price paid dataset
 # - contains invalid UTF-8 characters ..
